--- a/services/whiteboard/whiteboard_service/templates/whiteboard_service/room.html
+++ b/services/whiteboard/whiteboard_service/templates/whiteboard_service/room.html
@@ -15,7 +15,7 @@
 
         const chatSocket = new WebSocket(
             'ws://'
-            + "https://whiteboard-service-2pmnanshaq-uw.a.run.app"
+            + "whiteboard-service-2pmnanshaq-uw.a.run.app"
             + '/ws/whiteboard/'
             + roomName
             + '/'
