--- a/services/whiteboard/whiteboard_service/templates/whiteboard_service/room.html
+++ b/services/whiteboard/whiteboard_service/templates/whiteboard_service/room.html
@@ -14,7 +14,7 @@
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
         const chatSocket = new WebSocket(
-            'ws://'
+            'wss://'
             + "whiteboard-service-2pmnanshaq-uw.a.run.app"
             + '/ws/whiteboard/'
             + roomName
