updated redis host again to finally work.

--- a/services/whiteboard/whiteboard_service/templates/whiteboard_service/room.html
+++ b/services/whiteboard/whiteboard_service/templates/whiteboard_service/room.html
@@ -14,8 +14,8 @@
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
         const chatSocket = new WebSocket(
-            'wss://'
-            + "whiteboard-service-2pmnanshaq-uw.a.run.app"
+            'ws://'
+            + window.location.host
             + '/ws/whiteboard/'
             + roomName
             + '/'
