--- a/client/board-talk/src/routes/container/style.css
+++ b/client/board-talk/src/routes/container/style.css
@@ -1,24 +1,48 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     position: fixed;
+    margin: auto;
+    background: lightgray;
+    border-width: 1px;
+    border-radius: 1%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, #03A9F4, #4CAF50);
+}
+
+.logo {
+    text-align: left;
+    margin: auto;
+    font-family: sans-serif;
+    display: inline;
+    color: black;
+    font-size: xx-large;
 }
 
 .color-picker-container {
     text-align: center;
     display: inline;
-    color: white;
+    margin: auto;
+    font-family: sans-serif;
+    color: black;
 }
 
 .brushsize-container {
+    text-align: center;
     display: inline;
-    color: white;
+    margin: auto;
+    font-family: sans-serif;
+    color: black;
     margin-left: 12px;
 }
 
 .tools-section {
-    text-align: center;
+    margin: auto;
+    padding: 10px;
+    width: 90%;
 }
 
 .board-container {
@@ -27,4 +51,7 @@
     margin: auto;
     margin-top: 1%;
     background: white;
+    border-width: 1px;
+    border-radius: 1%;
+    box-shadow: 0px 0px 20px 1px grey;
 }
